--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.2",
     "expo": "^40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
@@ -18,6 +19,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
     "react-native-calendars": "^1.1255.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
