--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -19,6 +20,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
     "react-native-calendars": "^1.1255.0",
+    "react-native-debugger": "^1.1.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-multi-selectbox": "^1.4.9",
     "react-native-picker-select": "^8.0.4",
@@ -29,8 +31,10 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
+    "react-navigation-header-buttons": "^7.0.1",
     "react-navigation-stack": "^2.10.4",
-    "react-navigation-tabs": "^2.11.0"
+    "react-navigation-tabs": "^2.11.0",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
