--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
+    "react-countdown-circle-timer": "^2.5.2",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
     "react-native-calendars": "^1.1255.0",
+    "react-native-countdown-circle-timer": "^2.5.2",
     "react-native-debugger": "^1.1.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-multi-selectbox": "^1.4.9",
@@ -28,6 +30,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-select-input-ios": "^2.0.5",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
